--- a/src/app/clientes/pages/garantias/garantias.component.html
+++ b/src/app/clientes/pages/garantias/garantias.component.html
@@ -1,4 +1,4 @@
-<form class="bg-white w-lg-75 p-3 mx-auto mt-3" [formGroup]="garantiaForm">
+<form class="bg-white w-lg-75 p-3 mx-auto mt-3" [formGroup]="clienteService.formularioCliente">
   <div class="row">
     <div class="col-md-6">
       <div class="mb-3">
@@ -24,7 +24,7 @@
           placeholder="Ingrese valor del artículo"
         />
 
-          <span class="text-danger fw-bold" *ngIf="vs.validarPattern(garantiaForm, 'precioArticulo')">
+          <span class="text-danger fw-bold" *ngIf="vs.validarPattern(clienteService.formularioCliente, 'precioArticulo')">
             Solo permite ingresar numeros
           </span>
       </div>
