--- a/src/app/clientes/pages/credito/credito.component.html
+++ b/src/app/clientes/pages/credito/credito.component.html
@@ -68,6 +68,7 @@
           id="plazo"
           class="form-control"
           placeholder="Ej: 2,3,4,6"
+          (input)="calcNumCuotas($event)"
           [class]="vs.campoObligatorio('plazo', clienteService.formularioCliente) ? 'border border-danger' : ''"
         >
         <span class="text-danger fw-bold" *ngIf="vs.validarPattern(clienteService.formularioCliente, 'plazo')">
