add: function to tabs next & previous

--- a/src/app/clientes/components/tabs/tabs.component.html
+++ b/src/app/clientes/components/tabs/tabs.component.html
@@ -3,7 +3,7 @@
 
 </header>
 
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+<mat-tab-group [selectedIndex]="clienteService.selectedIndex" mat-stretch-tabs="false" mat-align-tabs="start">
   <mat-tab label="Datos Generales">
     <app-cliente-nuevo></app-cliente-nuevo>
   </mat-tab>
