--- a/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -438,10 +438,13 @@
     
   </div>
 
-  <input 
-    class="btn btn-success float-end" type="submit"
-    value="Siguiente"
-  />
+  <button
+    type="button"
+    class="btn btn-success float-end"
+    (click)="clienteService.selectTab(1)"
+  >
+    Siguiente
+  </button>
 </form>
 
 
