--- a/src/app/clientes/pages/garantias/garantias.component.html
+++ b/src/app/clientes/pages/garantias/garantias.component.html
@@ -72,6 +72,26 @@
     </div>
   </div>
   
+  <div class="row mt-5">
+    <div class="col-sm-6">
+      <button
+        type="button"
+        class="btn btn-success w-100"
+        (click)="clienteService.selectTab(1)"
+      >
+        Anterior
+      </button>
+    </div>
   
+    <div class="col-sm-6">
+      <button
+        type="button"
+        class="btn btn-success mt-2 mt-sm-0 w-100"
+        (click)="clienteService.selectTab(3)"
+      >
+        Siguiente
+      </button>
+    </div>
+   </div>
 
 </form>
