--- a/src/app/clientes/pages/credito/credito.component.html
+++ b/src/app/clientes/pages/credito/credito.component.html
@@ -92,8 +92,28 @@
     </div>
 
   </div>
+
+  <div class="row mt-5">
+    <div class="col-sm-6">
+      <button
+        type="button"
+        class="btn btn-success w-100"
+        (click)="clienteService.selectTab(3)"
+      >
+        Anterior
+      </button>
+    </div>
+  
+    <div class="col-sm-6">
+      <button
+        type="button"
+        class="btn btn-success mt-2 mt-sm-0 w-100"
+        (click)="clienteService.selectTab(5)"
+      >
+        Siguiente
+      </button>
+    </div>
+   </div>
+
 </form>
 
-<pre>
-  {{clienteService.formularioCliente.value | json}}
-</pre>
