--- a/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -4,7 +4,7 @@
 </header>
 
 
-<form class="bg-white w-lg-75 p-3 mx-auto mt-3" [formGroup]="clienteService.formularioCliente">
+<form class="bg-white w-lg-75 p-3 mx-auto my-3" [formGroup]="clienteService.formularioCliente">
   <!-- Identificacion -->
   <div class="row">
     <div class="col-md-6">
@@ -109,7 +109,6 @@
     </div>
   </div>
   
-
   <!-- Genero/Sexo Cliente -->
   <div class="row">
     <div class="col-md-6">
@@ -438,32 +437,16 @@
     
   </div>
 
-  <button
-    type="button"
-    class="btn btn-success float-end"
-    (click)="clienteService.selectTab(1)"
-  >
-    Siguiente
-  </button>
+  <div class="row mt-4">
+    <div class="col">
+      <button
+        type="button"
+        class="btn btn-success float-end mt-2 mt-sm-0 w-100 w-md-auto"
+        (click)="clienteService.selectTab(1)"
+      >
+        Siguiente
+      </button>
+    </div>
+  </div>
 </form>
 
-
-<h5>touched</h5>
-<pre>
-  {{formularioClienteService.touched}}
-</pre>
-
-<h5>Form values</h5>
-<pre>
-  {{formularioClienteService.value | json}}
-</pre>
-
-<h5>DNI</h5>
-<pre>
-  {{formularioClienteService.controls.carnetOcedula.errors | json}}
-</pre>
-
-<h5>carnetOcedula</h5>
-<pre>
-  {{formularioClienteService.controls.carnetOcedula.errors | json}}
-</pre>
