--- a/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -442,7 +442,7 @@
       <button
         type="button"
         class="btn btn-success float-end mt-2 mt-sm-0 w-100 w-md-auto"
-        (click)="clienteService.selectTab(1)"
+        (click)="validarForm()"
       >
         Siguiente
       </button>
