--- a/src/app/clientes/pages/garantias/garantias.component.html
+++ b/src/app/clientes/pages/garantias/garantias.component.html
@@ -42,35 +42,73 @@
       >
       <button
         type="button"
-        class="me-3 d-md-none"
+        class="me-3 d-md-none btn btn-info"
         (click)="camara.click()"
         [disabled]="images.length === 3"
-      >camara</button>
-      <button type="button" class="me-3">Nuevo</button>
-      <button type="button" class="me-3">Lista</button>
+      >
+        camara
+      </button>
+      <button
+        type="button"
+        class="me-3"
+        class="btn btn-info"
+        (click)="agregarALista()"
+      >
+          Agregar
+        </button>
     </div>
 
   </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-6">
+  <div>
+    <p *ngIf="images.length" class="mt-2 fw-bold">imagenes</p>
+
+    <div
+      class="d-flex gap-2 d-md-none"
+    >
+      <div
+        *ngFor="let imagen of images; let i = index"
+        class=""
+      >
+        <img
+          [src]="imagen"
+          alt="imagen producto"
+          class="img-fluid mb-3"
+        >
+        <p class="fs-1 text-danger fw-bold" (click)="borrar(i)">X</p>
+      </div>
+
+      
+    </div>
+  </div>
+
+  <div *ngIf="lista.length" class="d-md-none">
+    <p class="text-center mt-4 mb-0 fw-bold fs-2 text-md-start">Garantias</p>
+
+    <div *ngFor="let list of lista">
+      <p class="mt-3 mb-1">
+        Artículo:
+        <span class="fw-bold">{{ list.articulo }}</span>
+      </p>
+      <p class="mt-3 mb-1">
+        Valor:
+        <span class="fw-bold">{{ list.valor | number:'1.2-2' }}</span>
+      </p>
+  
+      <div class="d-flex gap-2 d-md-none">
         <div
-          *ngFor="let imagen of images; let i = index"
+          *ngFor="let imagen of list.imagenes; let i = index"
         >
           <img
             [src]="imagen"
             alt="imagen producto"
-            class="img-fluid w-25"
+            class="img-fluid mb-3"
           >
-
-          <span class="fs-1 text-danger fw-bold" (click)="borrar(i)">X</span>
         </div>
       </div>
     </div>
-    </div>
   </div>
+
   
   <div class="row mt-5">
     <div class="col-sm-6">
@@ -87,7 +125,7 @@
       <button
         type="button"
         class="btn btn-success mt-2 mt-sm-0 w-100"
-        (click)="clienteService.selectTab(3)"
+        (click)="validarForm()"
       >
         Siguiente
       </button>
