change: next & previous icon

--- a/src/app/clientes/pages/calculo-cuota/calculo-cuota.component.html
+++ b/src/app/clientes/pages/calculo-cuota/calculo-cuota.component.html
@@ -48,10 +48,10 @@
     <div class="col-sm-6">
       <button
         type="button"
-        class="btn btn-success w-100"
+        class="btn btn-success"
         (click)="clienteService.selectTab(4)"
       >
-        Anterior
+        {{'<'}}
       </button>
     </div>
    </div>
