--- a/src/app/clientes/pages/aval/aval.component.html
+++ b/src/app/clientes/pages/aval/aval.component.html
@@ -303,24 +303,24 @@
 
   </div>
 
-  <div class="row mt-5">
-    <div class="col-sm-6">
+  <div class="d-flex justify-content-between mt-5">
+    <div class="">
       <button
         type="button"
-        class="btn btn-success w-100"
+        class="btn btn-success"
         (click)="clienteService.selectTab(0)"
       >
-        Anterior
+        {{'<'}}
       </button>
     </div>
   
-    <div class="col-sm-6">
+    <div class="">
       <button
         type="button"
-        class="btn btn-success mt-2 mt-sm-0 w-100"
+        class="btn btn-success mt-2 mt-sm-0"
         (click)="validarForm()"
       >
-        Siguiente
+        {{'>'}}
       </button>
     </div>
    </div>
