--- a/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/clientes/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -437,14 +437,14 @@
     
   </div>
 
-  <div class="row mt-4">
-    <div class="col">
+  <div class="d-flex justify-content-end mt-4">
+    <div>
       <button
         type="button"
         class="btn btn-success float-end mt-2 mt-sm-0 w-100 w-md-auto"
         (click)="validarForm()"
       >
-        Siguiente
+        {{'>'}}
       </button>
     </div>
   </div>
