fix: validation to credit form

--- a/src/app/clientes/pages/credito/credito.component.html
+++ b/src/app/clientes/pages/credito/credito.component.html
@@ -103,7 +103,7 @@
       <button
         type="button"
         class="btn btn-success"
-        (click)="clienteService.selectTab(5)"
+        (click)="validarForm()"
       >
         {{'>'}}
       </button>
